feat(topic): implement full CRUD and reinforce user-based security
Added update and delete methods. Implemented ownership validation across all endpoints to prevent IDOR. Refactored subject lookup to use SubjectService. Standardized exceptions for better error handling.